--- a/index.html
+++ b/index.html
@@ -12,29 +12,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="header">
 
         <nav>
-            <h1 class="nav-title">M<span class="text-color">uk</span>ul</h1>
+            <h2 class="nav-title">M<span class="text-color">uk</span>ul</h2>
             <ul>
                 <li>Portfolio</li>
                 <li>Blogs</li>
-                <li><button class="btn-first">Hire</button></li>
+                <li><button class="btn-primary">Hire</button></li>
             </ul>
         </nav>
 
-        
         <div class="banner">
-             <div>
-                <h2>Hi, I am</h2>
-                <h1>Md Mukul</h1>
-                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="btn-first"><i class="fa-solid fa-download"></i> Download Cv</button>
-             </div>
-             <div>
-                <img src="images/mukul1.png" alt="">
-             </div>
+            <div>
+                <h3 class="banner-sub-title">Hi, I am</h3>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+            </div>
+            <img src="images/hardy.png" alt="">
         </div>
+
 
     </header>
 </body>
