--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="header">
-
+      
         <nav>
             <h2 class="nav-title">M<span class="text-color">uk</span>ul</h2>
             <ul>
@@ -26,14 +26,39 @@
         <div class="banner">
             <div>
                 <h3 class="banner-sub-title">Hi, I am</h3>
-                <h1 class="banner-title">Mary Hardy</h1>
+                <h1 class="banner-title">Md M<span class="text-color">uk</span>ul</h1>
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                 <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
             <img src="images/hardy.png" alt="">
         </div>
 
-
     </header>
+
+    <main>
+        <section class="about">
+            <h1 class="about-title">About Me</h1>
+            <p class="about-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <div class="about-info-container">
+                <div class="about-info">
+                    <div class="info-title">Name:</div>
+                    <div class="info-description">Mary Hardy</div>
+                </div>
+                <div class="about-info">
+                    <div class="info-title">Email:</div>
+                    <div class="info-description">info@gmail.com</div>
+                </div>
+                <div class="about-info">
+                    <div class="info-title">Specialty:</div>
+                    <div class="info-description">Web Dev</div>
+                </div>
+                <div class="about-info">
+                    <div class="info-title">Specialty:</div>
+                    <div class="info-description">Web Dev</div>
+                </div>
+            </div>
+        </section>
+    </main>
+
 </body>
 </html>
