--- a/index.html
+++ b/index.html
@@ -60,6 +60,40 @@
               </div>
            </div>
         </section>
+
+        <section>
+            <div class="what-i-do">
+                <h1 class="section-title">What I Do</h1>
+                <div class="skill-container">
+                    <div class="skill">
+                        <img src="images/icons/js.png" alt="">
+                        <p class="skill-title">Vanilla JavaScript</p>
+                        <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, sequi consectetur. Facere consequuntur dolorem ipsa.</p>
+                    </div>
+                    <div class="skill">
+                        <img src="images/icons/react.png" alt="">
+                        <p class="skill-title">React</p>
+                        <p class="skill-description">Numquam fuga similique quaerat ad. Enim nesciunt aliquid illum? Quos commodi vero voluptatum tenetur eligendi.</p>
+                    </div>
+                    <div class="skill">
+                        <img src="images/icons/mongo.png" alt="">
+                        <p class="skill-title">MongoDb</p>
+                        <p class="skill-description">Distinctio explicabo consectetur dicta incidunt quod, nemo et inventore tempore quisquam commodi libero? Culpa, voluptatibus?</p>
+                    </div>
+                    <div class="skill">
+                        <img src="images/icons/nodejs.png" alt="">
+                        <p class="skill-title">Node Js</p>
+                        <p class="skill-description">Modi quibusdam dolore ut, nostrum aperiam ipsum quod placeat optio ab in labore officiis explicabo.</p>
+                    </div>
+                </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            
+        </section>
+
     </main>
 
 </body>
