--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     <main>
         <section>
            <div class="about">
-              <h1 class="about-title">About Me</h1>
-              <p class="about-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+              <h1 class="section-title">About Me</h1>
+              <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
               <div class="about-info-container">
                    <div class="about-info">
                       <div class="info-title">Name:</div>
@@ -98,7 +98,7 @@
         <!--Resume part start-->
        <section>
             <div class="resume">
-                <h1 class="section-title">A Summery Of My Resume</h1>
+                <h3 class="section-title">A summery Of My Resume</h3>
                 <div class="resume-content">
                     <div class="qualifacations">
                         <h3 class="qualification-title">My Education</h3>
@@ -147,9 +147,35 @@
             </div>
        </section>
         <!--Resume part end-->
-        <section>
-            
-        </section>
+
+        <!--form area start-->
+            <section>
+                <div class="form-area">
+                    <div class="form-text">
+                        <h3 class="section-title">Let's Connect</h3>
+                        <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                        <a href="">
+                            <img src="images/icons/facebook.png" alt="">
+                        </a>
+                        <a href="">
+                            <img src="images/icons/twitter.png" alt="">
+                        </a>
+                        <a href="">
+                            <img src="images/icons/insta.png" alt="">
+                        </a>
+                    </div>
+                    <div class="form">
+                        <h3 class="section-title">Let’s Message me</h3>  
+                        <form action="">
+                            <input type="text" placeholder="Your name">
+                            <input type="email" placeholder="Your Email">
+                            <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                            <input type="submit" class="btn-primary" value="Submit">
+                        </form>                 
+                     </div>
+                </div>
+            </section>
+        <!--form area end-->
     </main>
     <!--main part end-->
 </body>
